--- a/public/stylesheets/font/config/config.json
+++ b/public/stylesheets/font/config/config.json
@@ -85,6 +85,18 @@
       "src": "fontawesome"
     },
     {
+      "uid": "9dc654095085167524602c9acc0c5570",
+      "css": "left",
+      "code": 59406,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "fb1c799ffe5bf8fb7f8bcb647c8fe9e6",
+      "css": "right",
+      "code": 59407,
+      "src": "fontawesome"
+    },
+    {
       "uid": "05ef9b5e8742971aa85b23cfcbe71594",
       "css": "users",
       "code": 59403,
